duniverse/menhirLib.20200211/test/static/bad/undefined-producer.mly
%start<int> a
%token A
%%

a: A { $2 }
