duniverse/menhirLib.20200211/test/static/bad/undefined-producer.exp
File "undefined-producer.mly", line 5, characters 7-9:
Error: $2 refers to a nonexistent symbol.
